# biocentral_vis

./: README.md
flutter/: pubspec.yaml
flutter/example/: biocentral_vis_example.dart
flutter/lib/: biocentral_vis.dart
flutter/lib/src/: interactive_svg_chart.dart  plot_data.dart
python/: README.md  pyproject.toml
python/biocentral_vis/: __init__.py  biocentral_chart.py  biocentral_highlight.py
python/biocentral_vis/base/: __init__.py  biocentral_visualization.py  exporter.py
python/biocentral_vis/datasets/: __init__.py  dataset_plotting.py
python/biocentral_vis/models/: __init__.py  model_plotting.py
python/biocentral_vis/predictions/: __init__.py  highlight_prediction.py
python/biocentral_vis/projections/: __init__.py  projection_plotting.py
python/examples/scl/: README.md  plot_all_per_sequence.py  projection_result_scl.json  scl_label_distribution.json  scl_loss_curves.json  scl_model_test_set_performance.json  scl_out.yml  sequence_highlight.json
