[project]
name = "biocentral-vis"
version = "0.1.0"
description = "Cross-Platform Visualizations for the Biocentral Ecosystem"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0.post1",
    "biocentral-api @ git+https://github.com/biocentral/biocentral_api.git@9e6e3e821670f6549e6187b12185360680408aef#subdirectory=python",

]

[tool.uv.sources]
#biotrainer-core = { path = "../../biotrainerFork/biotrainer-core" }
#biocentral-api = { path = "../../biocentral_api/python"}