[project]
name = "biocentral-vis"
version = "0.1.0"
description = "Cross-Platform Visualizations for the Biocentral Ecosystem"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0.post1",
    "biocentral-api @ git+https://github.com/biocentral/biocentral_api.git@c64002d913cc391ab1c302be4dd9c15e1f3cfa27#subdirectory=python",

]

[tool.uv.sources]
#biotrainer-core = { path = "../../biotrainerFork/biotrainer-core" }
#biocentral-api = { path = "../../biocentral_api/python"}